update build remove lombok add spotbugs